--- a/configs/odir/resnet50.yaml
+++ b/configs/odir/resnet50.yaml
@@ -52,4 +52,5 @@ fast_training:
   epochs: 25
   batch_size: 128
   lr: 0.003
-  warmup_epochs: 1 
+  warmup_epochs: 1
+  max_steps_per_epoch: 100  # Maximum steps per epoch in fast mode 
